# sktime-mcp

./: pyproject.toml
src/sktime_mcp/: server.py
